--- a/beamscheme.lpi
+++ b/beamscheme.lpi
@@ -788,8 +788,8 @@
         <Filename Value="source/bstypes.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="2"/>
-        <TopLine Value="654"/>
-        <CursorPos X="119" Y="662"/>
+        <TopLine Value="26"/>
+        <CursorPos X="10" Y="179"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -811,9 +811,10 @@
       <Unit90>
         <Filename Value="source/param2dfuncs.pas"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
-        <TopLine Value="58"/>
-        <CursorPos X="37" Y="54"/>
+        <TopLine Value="285"/>
+        <CursorPos X="71" Y="312"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit90>
@@ -834,7 +835,7 @@
         <Filename Value="source/mathsfuncs.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="6"/>
-        <TopLine Value="258"/>
+        <TopLine Value="10"/>
         <CursorPos X="19" Y="455"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
@@ -850,7 +851,7 @@
         <Filename Value="source/importunit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="679"/>
+        <TopLine Value="720"/>
         <CursorPos Y="692"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
@@ -911,7 +912,6 @@
       <Unit99>
         <Filename Value="source/param1dfuncs.pas"/>
         <UnitName Value="param1Dfuncs"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="4"/>
         <TopLine Value="800"/>
         <CursorPos X="55" Y="245"/>
@@ -1090,119 +1090,127 @@
     <Build>
       <CleanOutputFileMask Value="*.ppu;*.ppl;*.o;*.or"/>
     </Build>
-    <JumpHistory Count="28" HistoryIndex="27">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1056" TopLine="1047"/>
+        <Caret Line="1058" TopLine="1044"/>
       </Position1>
       <Position2>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1058" TopLine="1047"/>
+        <Caret Line="1059" TopLine="1044"/>
       </Position2>
       <Position3>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1050" Column="8" TopLine="1044"/>
+        <Caret Line="1067" TopLine="1044"/>
       </Position3>
       <Position4>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1051" TopLine="1044"/>
+        <Caret Line="1068" TopLine="1044"/>
       </Position4>
       <Position5>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1052" TopLine="1044"/>
+        <Caret Line="1050" Column="8" TopLine="1044"/>
       </Position5>
       <Position6>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1056" TopLine="1044"/>
+        <Caret Line="1051" TopLine="1044"/>
       </Position6>
       <Position7>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1058" TopLine="1044"/>
+        <Caret Line="1052" TopLine="1044"/>
       </Position7>
       <Position8>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1059" TopLine="1044"/>
+        <Caret Line="1056" TopLine="1044"/>
       </Position8>
       <Position9>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1067" TopLine="1044"/>
+        <Caret Line="1058" TopLine="1044"/>
       </Position9>
       <Position10>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1068" TopLine="1044"/>
+        <Caret Line="1059" TopLine="1044"/>
       </Position10>
       <Position11>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1050" Column="8" TopLine="1044"/>
+        <Caret Line="1067" TopLine="1044"/>
       </Position11>
       <Position12>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1051" TopLine="1044"/>
+        <Caret Line="1050" TopLine="1044"/>
       </Position12>
       <Position13>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1052" TopLine="1044"/>
+        <Caret Line="1051" TopLine="1044"/>
       </Position13>
       <Position14>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1056" TopLine="1044"/>
+        <Caret Line="1052" TopLine="1044"/>
       </Position14>
       <Position15>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1058" TopLine="1044"/>
+        <Caret Line="1056" TopLine="1044"/>
       </Position15>
       <Position16>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1059" TopLine="1044"/>
+        <Caret Line="1058" TopLine="1044"/>
       </Position16>
       <Position17>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1067" TopLine="1044"/>
+        <Caret Line="1383" Column="9" TopLine="1372"/>
       </Position17>
       <Position18>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1050" TopLine="1044"/>
+        <Caret Line="1383" Column="9" TopLine="1372"/>
       </Position18>
       <Position19>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1051" TopLine="1044"/>
+        <Caret Line="1058" Column="25" TopLine="1043"/>
       </Position19>
       <Position20>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1052" TopLine="1044"/>
+        <Caret Line="1036" Column="29" TopLine="1033"/>
       </Position20>
       <Position21>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1056" TopLine="1044"/>
+        <Caret Line="643" TopLine="515"/>
       </Position21>
       <Position22>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1058" TopLine="1044"/>
+        <Caret Line="1087" TopLine="1079"/>
       </Position22>
       <Position23>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1383" Column="9" TopLine="1372"/>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="304" TopLine="271"/>
       </Position23>
       <Position24>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1383" Column="9" TopLine="1372"/>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="103" Column="32" TopLine="61"/>
       </Position24>
       <Position25>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1058" Column="25" TopLine="1043"/>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="55" Column="41" TopLine="29"/>
       </Position25>
       <Position26>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1036" Column="29" TopLine="1033"/>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="286" Column="18" TopLine="276"/>
       </Position26>
       <Position27>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="643" TopLine="515"/>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="295" Column="25" TopLine="269"/>
       </Position27>
       <Position28>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1087" TopLine="1079"/>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="296" Column="49" TopLine="284"/>
       </Position28>
+      <Position29>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="305" Column="28" TopLine="289"/>
+      </Position29>
+      <Position30>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="311" Column="50" TopLine="279"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
