--- a/beamscheme.lpi
+++ b/beamscheme.lpi
@@ -167,9 +167,8 @@
         <ComponentName Value="BSForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <IsVisibleTab Value="True"/>
-        <TopLine Value="166"/>
-        <CursorPos X="5" Y="185"/>
+        <TopLine Value="875"/>
+        <CursorPos X="29" Y="899"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -918,9 +917,10 @@
       <Unit99>
         <Filename Value="source/param1dfuncs.pas"/>
         <UnitName Value="param1Dfuncs"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="800"/>
-        <CursorPos X="55" Y="245"/>
+        <TopLine Value="188"/>
+        <CursorPos X="30" Y="196"/>
         <ExtraEditorCount Value="2"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -1105,124 +1105,124 @@
     </Build>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1052" TopLine="1044"/>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="55" Column="41" TopLine="29"/>
       </Position1>
       <Position2>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1056" TopLine="1044"/>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="286" Column="18" TopLine="276"/>
       </Position2>
       <Position3>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1058" TopLine="1044"/>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="295" Column="25" TopLine="269"/>
       </Position3>
       <Position4>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1383" Column="9" TopLine="1372"/>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="296" Column="49" TopLine="284"/>
       </Position4>
       <Position5>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1383" Column="9" TopLine="1372"/>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="305" Column="28" TopLine="289"/>
       </Position5>
       <Position6>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1058" Column="25" TopLine="1043"/>
+        <Filename Value="source/param2dfuncs.pas"/>
+        <Caret Line="311" Column="50" TopLine="279"/>
       </Position6>
       <Position7>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1036" Column="29" TopLine="1033"/>
+        <Caret Line="644" Column="20" TopLine="629"/>
       </Position7>
       <Position8>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="643" TopLine="515"/>
+        <Caret Line="707" Column="16" TopLine="656"/>
       </Position8>
       <Position9>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1087" TopLine="1079"/>
+        <Caret Line="614" Column="63" TopLine="584"/>
       </Position9>
       <Position10>
-        <Filename Value="source/param2dfuncs.pas"/>
-        <Caret Line="304" TopLine="271"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="623" TopLine="584"/>
       </Position10>
       <Position11>
-        <Filename Value="source/param2dfuncs.pas"/>
-        <Caret Line="103" Column="32" TopLine="61"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="794" TopLine="766"/>
       </Position11>
       <Position12>
-        <Filename Value="source/param2dfuncs.pas"/>
-        <Caret Line="55" Column="41" TopLine="29"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="795" TopLine="766"/>
       </Position12>
       <Position13>
-        <Filename Value="source/param2dfuncs.pas"/>
-        <Caret Line="286" Column="18" TopLine="276"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="796" TopLine="766"/>
       </Position13>
       <Position14>
-        <Filename Value="source/param2dfuncs.pas"/>
-        <Caret Line="295" Column="25" TopLine="269"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="797" TopLine="766"/>
       </Position14>
       <Position15>
-        <Filename Value="source/param2dfuncs.pas"/>
-        <Caret Line="296" Column="49" TopLine="284"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="823" TopLine="797"/>
       </Position15>
       <Position16>
-        <Filename Value="source/param2dfuncs.pas"/>
-        <Caret Line="305" Column="28" TopLine="289"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="725" Column="34" TopLine="696"/>
       </Position16>
       <Position17>
-        <Filename Value="source/param2dfuncs.pas"/>
-        <Caret Line="311" Column="50" TopLine="279"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="184" Column="37" TopLine="154"/>
       </Position17>
       <Position18>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="644" Column="20" TopLine="629"/>
+        <Caret Line="861" TopLine="859"/>
       </Position18>
       <Position19>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="707" Column="16" TopLine="656"/>
+        <Caret Line="191" Column="48" TopLine="166"/>
       </Position19>
       <Position20>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="614" Column="63" TopLine="584"/>
+        <Caret Line="184" Column="49" TopLine="166"/>
       </Position20>
       <Position21>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="623" TopLine="584"/>
+        <Caret Line="23" Column="37"/>
       </Position21>
       <Position22>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="794" TopLine="766"/>
+        <Caret Line="10" Column="34"/>
       </Position22>
       <Position23>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="795" TopLine="766"/>
+        <Caret Line="57" Column="51" TopLine="18"/>
       </Position23>
       <Position24>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="796" TopLine="766"/>
+        <Caret Line="77" Column="36" TopLine="38"/>
       </Position24>
       <Position25>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="797" TopLine="766"/>
+        <Caret Line="84" Column="39" TopLine="45"/>
       </Position25>
       <Position26>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="823" TopLine="797"/>
+        <Caret Line="111" Column="25" TopLine="72"/>
       </Position26>
       <Position27>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="725" Column="34" TopLine="696"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="132" Column="32" TopLine="93"/>
       </Position27>
       <Position28>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="184" Column="37" TopLine="154"/>
+        <Caret Line="135" Column="30" TopLine="96"/>
       </Position28>
       <Position29>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="861" TopLine="859"/>
+        <Caret Line="147" Column="24" TopLine="108"/>
       </Position29>
       <Position30>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="191" Column="48" TopLine="166"/>
+        <Caret Line="194" Column="33" TopLine="155"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
